// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`block-ignore.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 45
    : rangeStart: 22
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | /* prettier-ignore */
> 2 | const a  =  [1,2,   3];
    | ^^^^^^^^^^^^^^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : /* prettier-ignore */
    : const a  =  [1,2,   3];
    :
    : ================================================================================
`;

exports[`ignored-and-following.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 66
    : rangeStart: 19
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | // prettier-ignore
> 2 | const a  =  [1,2,   3];
    | ^^^^^^^^^^^^^^^^^^^^^^^
> 3 | const b  =  [4,5,   6];
    | ^^^^^^^^^^^^^^^^^^^^^^^
  4 |
    : =====================================output=====================================
    : // prettier-ignore
    : const a  =  [1,2,   3];
    : const b = [4, 5, 6];
    :
    : ================================================================================
`;

exports[`ignored-statement.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 42
    : rangeStart: 19
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | // prettier-ignore
> 2 | const a  =  [1,2,   3];
    | ^^^^^^^^^^^^^^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : // prettier-ignore
    : const a  =  [1,2,   3];
    :
    : ================================================================================
`;

exports[`inside-ignored-statement.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 58
    : rangeStart: 48
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | // prettier-ignore
> 2 | function ugly( ){const a  =  [1,2,   3];}
    |                              ^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : // prettier-ignore
    : function ugly( ){const a  =  [1,2,   3];}
    :
    : ================================================================================
`;

exports[`nested-ignored-statement.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 63
    : rangeStart: 40
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | function foo() {
  2 |   // prettier-ignore
> 3 |   const a  =  [1,2,   3];
    |   ^^^^^^^^^^^^^^^^^^^^^^^
  4 | }
  5 |
    : =====================================output=====================================
    : function foo() {
    :   // prettier-ignore
    :   const a  =  [1,2,   3];
    : }
    :
    : ================================================================================
`;

exports[`ordinary-leading-comment.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 82
    : rangeStart: 59
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | // An ordinary comment must not preserve unformatted code.
> 2 | const a  =  [1,2,   3];
    | ^^^^^^^^^^^^^^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : // An ordinary comment must not preserve unformatted code.
    : const a = [1, 2, 3];
    :
    : ================================================================================
`;

exports[`preceding-statement.js format 1`] = `
    : ====================================options=====================================
    : parsers: ["babel", "flow", "typescript"]
    : rangeEnd: 66
    : rangeStart: 43
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | const before  =  [0,1];
  2 | // prettier-ignore
> 3 | const a  =  [1,2,   3];
    | ^^^^^^^^^^^^^^^^^^^^^^^
  4 | const after  =  [4,5];
  5 |
    : =====================================output=====================================
    : const before  =  [0,1];
    : // prettier-ignore
    : const a  =  [1,2,   3];
    : const after  =  [4,5];
    :
    : ================================================================================
`;
